--- a/Semana03/PRJ_COMERCIAL/package.json
+++ b/Semana03/PRJ_COMERCIAL/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sweetalert2": "^11.13.2"
   }
 }
